--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -7,6 +7,11 @@
     font-family: 'Rajdhani', sans-serif;
 }
 
+/*### Deixa a rolagem do site de fora suave ###*/
+html {
+    scroll-behavior: smooth;
+}
+
 /* Body */
 body {
     background-color: #fff;    
@@ -40,17 +45,40 @@ body {
 }
 /*******/
 
+/* Botão voltar ao topo */
+.btn-voltar-topo {
+    display: none;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    padding: 15px;
+    background-color:#e67e22;    
+    border-radius: 50%; 
+    z-index: 1006;   
+    transition: 0.3s;
+}
+
+.btn-voltar-topo:hover {
+    background-color: #cd6a13;
+}
+
+.btn-voltar-topo span {
+    color: #fff;
+    font-weight: bold;
+}
+/***********************/
 
 
 /* Header */
 header {
     position: fixed;
     top: 0;
-    border-bottom: 5px solid #FF914D;    
+    border-bottom: 5px solid #fff;    
     box-shadow: 0 0 1em #999;
     width: 100%;
     background-color: #fff;
-    z-index: 1001;         
+    z-index: 1001;
+    transition: 0.3s;         
 }
 
 header .container nav {
@@ -514,7 +542,7 @@ header .container nav .div-menu-2 .div-barra-pesquisa form .icon-lupa {
 }
 
 
-@media (min-width: 769px) {
+@media (min-width: 769px) {    
 
     /* Header */    
     header .container nav .div-menu-1 .link-carrinho span{        
@@ -809,6 +837,13 @@ header .container nav .div-menu-2 .div-barra-pesquisa form .icon-lupa {
 
 
 @media (min-width: 1280px) {
+
+    /* Botão voltar ao topo */
+    .btn-voltar-topo {      
+        bottom: 50px;
+        right: 20px;        
+    }
+    /***********************/
 
     /* Header */
 
