--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,7 @@
+<a id="btn-voltar-ao-topo" class="btn-voltar-topo" href="#">
+    <span class="material-icons-outlined">expand_less</span>
+</a>
+
 <footer>
     <div class="div-footer-config">
         <div class="div-informacoes">
