Inicialização da pagina de cadastro de endereços

--- a/views/partials/menu-lateral-perfil.ejs
+++ b/views/partials/menu-lateral-perfil.ejs
@@ -11,6 +11,12 @@
                 <span class="material-icons">article</span>
                 Meus Dados
             </a>
-        </li>                            
+        </li>   
+        <li>
+            <a href="/usuario/enderecos">
+                <span class="material-icons-outlined">location_on</span>
+                Endereço
+            </a>
+        </li>                           
     </ul>
 </nav>
