--- a/views/meus-dados.ejs
+++ b/views/meus-dados.ejs
@@ -67,7 +67,7 @@
                             <div class="div-email-tel">
                                 <div class="div-email">
                                     <label for="email">E-Mail</label>
-                                    <input id="email" name="email" type="email" value="fernandofm3@gmail.com" disabled required>
+                                    <input id="email" name="email" type="email" value="<%= meusDados.email %> " disabled required>
                                 </div>
                                 <div class="div-tel">
                                     <label for="tel">Telefone</label>
