realizado mocagem dos produtos direto do banco de dados. Também realizado alguns ajustes na página index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,23 +48,23 @@
         <div class="div-main-config-home">            
             <section class="container">
                 <h2 class="home-section-titulos">
-                    <span class="material-icons-outlined">paid</span> PROMOÇÕES
+                    <span class="material-icons-outlined">paid</span> PRODUTOS
                 </h2>  
                 <div class="div-cards-principal">      
                     <div class="div-cards">
                         
-                        <% for (let i=0; i<=11; i++) { %> 
+                        <% for (const produto of produtos) { %> 
 
-                            <article class="card" onclick="location.href='/produto/<%=[i]%>';">
+                            <article class="card" onclick="location.href='/produto/<%=produto.id%>';">
                                 <div class="div-card-img-infos">
                                     <figure>
-                                        <img src="/images/produtos/<%= produtos[i].img %> " alt="Imagem PC Gamer">
+                                        <img src="/images/produtos/<%= produto.img %> " alt="Imagem PC Gamer">
                                     </figure>
                                     <div class="card-infos">
-                                        <p class="card-nome-produto"><%= produtos[i].nome %></p>
-                                        <p class="card-preco-anterior">De: R$<%= produtos[i].preco %> por:</p>
-                                        <p class="card-preco-atual"><strong>R$<%= ((produtos[i].preco / 10 ) * 9).toFixed(2) %> à vista</strong></p>
-                                        <p class="card-preco-parcelado">12x de R$<%= (produtos[i].preco / 12).toFixed(2) %></p>
+                                        <p class="card-nome-produto"><%= produto.produto_categoria.nome + " " + produto.produto_marca.nome + " " + produto.nome %></p>
+                                        <p class="card-preco-anterior">De: <%= produto.preco.toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}); %> por:</p>
+                                        <p class="card-preco-atual"><strong><%= ((produto.preco / 10 ) * 9).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}); %> à vista</strong></p>
+                                        <p class="card-preco-parcelado">12 x de <%= (produto.preco / 12).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'}); %></p>
                                     </div>                              
                                 </div>
                                 <button>
@@ -80,40 +80,7 @@
                 </div>                                  
             </section>
             
-            <section class="container">
-                <h2 class="home-section-titulos">
-                    <span class="material-icons-outlined">location_searching</span> MAIS PROCURADOS
-                </h2>
-                <div class="div-cards-principal">      
-                    <div class="div-cards">
-
-                        <% for (let i=12; i<=23; i++) { %>                            
-
-                            <article class="card" onclick="location.href='/produto/<%=[i]%>';">
-                                <div class="div-card-img-infos">
-                                    <figure>
-                                        <img src="/images/produtos/<%= produtos[i].img %> " alt="Imagem PC Gamer">
-                                    </figure>
-                                    <div class="card-infos">
-                                        <p class="card-nome-produto"><%= produtos[i].nome %></p>
-                                        <p class="card-preco-anterior">De: R$<%= produtos[i].preco %> por:</p>
-                                        <p class="card-preco-atual"><strong>R$<%= ((produtos[i].preco / 10 ) * 9).toFixed(2) %> à vista</strong></p>
-                                        <p class="card-preco-parcelado">12x de R$<%= (produtos[i].preco / 12).toFixed(2) %></p>
-                                    </div>                                
-                                </div>
-
-                                <button class="btn_div">
-                                    <a class="btn_a" href="/carrinho">
-                                        <span class="material-icons-outlined">shopping_cart</span> Comprar
-                                    </a>
-                                </button>
-                            </article> 
-
-                        <% } %>
-
-                    </div>
-                </div>
-            </section>       
+           
         </div>
     </main>
 
