--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -51,12 +51,16 @@
                             </a>
 
                             <ul class="submenu-departamentos-mobile">
-                                <li><a href="#">PC Gamer</a></li>   
-                                <li><a href="#">Desktop</a></li>   
                                 <li><a href="#">Notebook</a></li>   
+                                <li><a href="#">Smartphone</a></li>   
+                                <li><a href="#">Desktop</a></li>   
                                 <li><a href="#">Hardware</a></li>    
-                                <li><a href="#">Smartphone</a></li>                               
                                 <li><a href="#">Tablet</a></li>                               
+                                <li><a href="#">Periféricos</a></li>   
+                                <li><a href="#">Eletrônicos</a></li>                             
+                                <li><a href="#">All In One</a></li>                             
+                                <li><a href="#">Cadeira Gamer</a></li>                             
+                                <li><a href="#">Geek</a></li>                             
                             </ul>
                         </li>
                         
@@ -109,29 +113,24 @@
                         <span class="material-icons-outlined">menu</span> DEPARTAMENTOS
                         <ul class="submenu-departamentos">
                             <li class="submenu-departamentos-li-pc-gamer">
-                                <a href="#">PC Gamer</a>
+                                <a href="#">Notebook</a>
                                 <!--span class="material-icons-outlined">navigate_next</span>
                                 <ul class="submenu-pc-gamer">
                                     <li><a href="#">Fast White</a></li>
                                     <li><a href="#">Red Force</a></li>
                                 </ul-->
                             </li>
-
+                            
+                            <li><a href="#">Smartphone</a></li>   
                             <li><a href="#">Desktop</a></li>   
-                            <li><a href="#">Notebook</a></li>
+                            <li><a href="#">Hardware</a></li>    
+                            <li><a href="#">Tablet</a></li>                               
+                            <li><a href="#">Periféricos</a></li>   
+                            <li><a href="#">Eletrônicos</a></li>                             
+                            <li><a href="#">All In One</a></li>                             
+                            <li><a href="#">Cadeira Gamer</a></li>                             
+                            <li><a href="#">Geek</a></li> 
 
-                            <li class="submenu-departamentos-li-hardware">
-                                <a href="#">Hardware</a>
-                                <!--span class="material-icons-outlined">navigate_next</span>
-                                <ul class="submenu-hardware">
-                                    <li><a href="#">Pl-Vídeo</a></li>
-                                    <li><a href="#">Processador</a></li>
-                                </ul-->
-                            </li>
-
-                            <li><a href="#">Tablet</a></li>
-
-                            <li><a href="#">Smartphone</a></li>
                         </ul>
                         <span class="material-icons-outlined btn-departamentos-seta-para-baixo">arrow_drop_down</span>
                     </button>                        
