--- a/public/stylesheets/enderecos.css
+++ b/public/stylesheets/enderecos.css
@@ -109,27 +109,6 @@
     background-color: #3482b6;   
 }
 
-.div_card_principal{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.card_endereco{
-    padding: 20px; 
-    list-style: none;
-    box-shadow: 3px 2px 10px 4px #888;
-    border-radius: 7px;
-    margin-top: 30px;
-    transition: 0.3s;
-    background-color: white;
-    width: 100%;
-    
-}
-.card_endereco:hover{
-    box-shadow: 5px 4px 15px 6px #888;
-}
 
 .titulo-meus-enderecos {
     display: flex;
@@ -164,10 +143,50 @@
     
 }
 
+.div_card_principal{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
+.card_endereco{
+    display: flex;
+    flex-direction: row;
+    align-items: center;    
+    list-style: none;
+    box-shadow: 1px 2px 5px 2px #888;
+    border-radius: 7px;
+    margin-top: 30px;    
+    background-color: white;
+    width: 100%;
+    transition: 0.6s;    
+}
+
+.card_endereco:hover{
+    box-shadow: 2px 3px 8px 4px #888;
+}
+
+.card_endereco .div-icon-endereco {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 15px;
+    background-color: #2980b9;
+    height: 100%;
+    border-bottom-left-radius: 7px;
+    border-top-left-radius: 7px;
+    color: #fff;
+}
+
+.card_endereco .div-icon-endereco span {
+    font-size: 1.563rem;
+}
 
 .card_endereco ul{
     list-style: none;
+    padding: 20px;
+    width: 100%;
     
 }
 
@@ -181,27 +200,39 @@
 
 }
 
-.card_endereco form button{
-    text-decoration: none;
-    padding: 10px;
-    background-color: #e74c3c;
-    text-align: center;
-    display: block;
-    margin-top: 10px;
-    width: 100px;
-    color: white;
-    font-weight: bold;
+.card_endereco .div-btn-edicao-delete {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+.card_endereco form button{    
+    padding: 5px;
+        
+    margin-top: 20px;    
+    color: white;    
     border-radius: 7px;
     transition: 0.3s;
     cursor: pointer;
     border: none;
 }
-.card_endereco form button:hover{
-    background-color: #c0392b;
+
+.card_endereco .form-btn-editar-endereco button{
+    margin-right: 5px;
+    background-color: #337ab7;
 }
 
+.card_endereco .form-btn-editar-endereco button:hover {
+    background-color: #2e6da4;
+}
 
+.card_endereco .form-btn-deletar-endereco button{
+    background-color: #d9534f;
+}
 
+.card_endereco .form-btn-deletar-endereco button:hover {
+    background-color: #d43f3a;
+}
 
 /******************* @media ****************************/
 
