--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -102,7 +102,7 @@
         </div>
     </main>
 
-    <%- include('./partials/footer') %>
+    <%- //include('./partials/footer') %>
 
 </body>
 </html>
