--- a/views/cadastroDeEndereco.ejs
+++ b/views/cadastroDeEndereco.ejs
@@ -123,7 +123,7 @@
         </div>
     </main>
 
-    <%- include('./partials/footer') %>
+    <%- //include('./partials/footer') %>
 
 </body>
 </html>
