--- a/views/meus-dados.ejs
+++ b/views/meus-dados.ejs
@@ -89,7 +89,7 @@
         </div>
     </main>
 
-    <%- include('./partials/footer') %>
+    <%- //include('./partials/footer') %>
 
 </body>
 </html>
