--- a/views/enderecos.ejs
+++ b/views/enderecos.ejs
@@ -77,7 +77,7 @@
                                                     </button>
                                                 </form>
 
-                                                <form class="form-btn-deletar-endereco" action="/usuario/enderecos/delete" method="POST">
+                                                <form class="form-btn-deletar-endereco" action="/usuario/enderecos/delete?_method=DELETE" method="POST">
                                                     <input type="text" name="endereco_para_excluir" value="<%= enderecos[i].id %>" hidden>
                                                     <button type="submit" onclick="return confirm('Este endereço será excluído!');" >
                                                         <span class="material-icons-outlined">delete</span>
