--- a/views/editarEndereco.ejs
+++ b/views/editarEndereco.ejs
@@ -43,7 +43,14 @@
                             <div class="div-rua-nunero">
                                 <div class="div-rua">
                                     <label for="rua">Rua</label>
-                                    <input id="rua" name="rua" type="text" value="<%= endereco.rua %>" placeholder="Digite o nome da rua" > 
+
+                                    <% if(endereco != null) { %>
+                                            <input id="rua" name="rua" type="text" value="<%= endereco.rua %>" placeholder="Digite o nome da rua" >                                        
+                                    <% } %> 
+
+                                    <% if(locals.dadosPreenchido) { %>                                        
+                                        <input id="rua" name="rua" type="text" value="<%= locals.dadosPreenchido && dadosPreenchido.rua %>" placeholder="Digite o nome da rua" >                                        
+                                    <% } %>                                     
 
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.rua) { %>
                                         <p class="msg-erro-form-endereco"> 
@@ -54,7 +61,15 @@
                                 </div>
                                 <div class="div-numero">
                                     <label for="numero">Número</label>
-                                    <input id="numero" name="numero" value="<%= endereco.numero %>" type="text" placeholder="Digite o número" >
+
+                                    <% if(endereco != null) { %>
+                                        <input id="numero" name="numero" value="<%= endereco.numero %>" type="text" placeholder="Digite o número" >                                        
+                                    <% } %>
+
+                                    <% if(locals.dadosPreenchido) { %>
+                                        <input id="numero" name="numero" value="<%= dadosPreenchido.numero %>" type="text" placeholder="Digite o número" >                                        
+                                    <% } %> 
+
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.numero) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.numero.param + ":  " %></b>  <%= errorsFormEndereco.numero.msg %>
@@ -62,10 +77,19 @@
                                     <% } %>  
                                 </div>                                
                             </div>
+
                             <div class="div-complemento-cep-bairro">
                                 <div class="div-complemento">
                                     <label for="complemento">Complemento</label>
-                                    <input id="complemento" name="complemento" value="<%= endereco.complemento %>" type="text" placeholder="Digite o complemento" >
+
+                                    <% if(endereco != null) { %>
+                                        <input id="complemento" name="complemento" value="<%= endereco.complemento %>" type="text" placeholder="Digite o complemento" >                                        
+                                    <% } %>
+
+                                    <% if(locals.dadosPreenchido) { %>
+                                        <input id="complemento" name="complemento" value="<%= dadosPreenchido.complemento %>" type="text" placeholder="Digite o complemento" >                                        
+                                    <% } %> 
+
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.complemento) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.complemento.param + ":  " %></b>  <%= errorsFormEndereco.complemento.msg %>
@@ -74,7 +98,15 @@
                                 </div>
                                 <div class="div-cep">
                                     <label for="cep">CEP</label>
-                                    <input id="cep" name="cep" type="text" value="<%= endereco.cep %>"  placeholder="Digite o seu CEP" >
+
+                                    <% if(endereco != null) { %>
+                                        <input id="cep" name="cep" type="text" value="<%= endereco.cep %>"  placeholder="Digite o seu CEP" >                                        
+                                    <% } %>
+
+                                    <% if(locals.dadosPreenchido) { %>
+                                        <input id="cep" name="cep" type="text" value="<%= dadosPreenchido.cep %>"  placeholder="Digite o seu CEP" >                                        
+                                    <% } %> 
+
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.cep) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.cep.param + ":  " %></b>  <%= errorsFormEndereco.cep.msg %>
@@ -82,8 +114,16 @@
                                     <% } %> 
                                 </div>
                                 <div class="div-bairro">
-                                    <label for="bairro">Bairro</label>
-                                    <input id="bairro" name="bairro" value="<%= endereco.bairro %>"  type="text" placeholder="Digite o seu bairro" >
+                                    <label for="bairro">Bairro</label>                                    
+
+                                    <% if(endereco != null) { %>
+                                        <input id="bairro" name="bairro" value="<%= endereco.bairro %>"  type="text" placeholder="Digite o seu bairro" >                                        
+                                    <% } %>
+
+                                    <% if(locals.dadosPreenchido) { %>
+                                        <input id="bairro" name="bairro" value="<%= dadosPreenchido.bairro %>"  type="text" placeholder="Digite o seu bairro" >                                        
+                                    <% } %> 
+
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.bairro) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.bairro.param + ":  " %></b>  <%= errorsFormEndereco.bairro.msg %>
@@ -91,10 +131,19 @@
                                     <% } %> 
                                 </div>
                             </div>
+
                             <div class="div-cidade-estado">
                                 <div class="div-cidade">
                                     <label for="cidade">Cidade</label>
-                                    <input id="cidade" name="cidade" type="text" value="<%= endereco.cidade %>"  placeholder="Digite o nome da sua cidade" >
+
+                                    <% if(endereco != null) { %>
+                                        <input id="cidade" name="cidade" type="text" value="<%= endereco.cidade %>"  placeholder="Digite o nome da sua cidade" >                                        
+                                    <% } %>
+
+                                    <% if(locals.dadosPreenchido) { %>
+                                        <input id="cidade" name="cidade" type="text" value="<%= dadosPreenchido.cidade %>"  placeholder="Digite o nome da sua cidade" >                                        
+                                    <% } %>
+
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.cidade) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.cidade.param + ":  " %></b>  <%= errorsFormEndereco.cidade.msg %>
@@ -103,7 +152,15 @@
                                 </div>
                                 <div class="div-estado">
                                     <label for="estado">Estado</label>
-                                    <input id="estado" name="estado" value="<%= endereco.estado %>"  type="text" placeholder="Digite o nome do seu estado" >
+
+                                    <% if(endereco != null) { %>
+                                        <input id="estado" name="estado" value="<%= endereco.estado %>"  type="text" placeholder="Digite o nome do seu estado" >                                        
+                                    <% } %>
+
+                                    <% if(locals.dadosPreenchido) { %>
+                                        <input id="estado" name="estado" value="<%= dadosPreenchido.estado %>"  type="text" placeholder="Digite o nome do seu estado" >                                        
+                                    <% } %>
+
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.estado) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.estado.param + ":  " %></b>  <%= errorsFormEndereco.estado.msg %>
@@ -111,7 +168,15 @@
                                     <% } %> 
                                 </div>
                             </div>
-                            <input type="text" name="endereco_para_atualizar" value="<%= endereco.id %>" hidden>
+
+                            <% if(endereco != null) { %>
+                                <input type="text" name="endereco_para_atualizar" value="<%= endereco.id %>" hidden>                                        
+                            <% } %>
+
+                            <% if(locals.dadosPreenchido) { %>
+                                <input type="text" name="endereco_para_atualizar" value="<%= dadosPreenchido.endereco_para_atualizar %>" hidden>                                        
+                            <% } %>
+
                             <div class="div-btn-atualiza-endereco">
                                 <button type="submit">ATUALIZAR</button>                                
                             </div>                             
