--- a/public/stylesheets/meus-dados.css
+++ b/public/stylesheets/meus-dados.css
@@ -95,6 +95,17 @@
     background-color: #3482b6;   
 }
 
+.infoAtualizacaoSucesso{
+
+    color: #0f5132;
+    background-color: #d1e7dd;
+    font-size: 1rem;
+    padding: 15px;
+    border-radius: 7px;
+    margin-bottom: 1%;
+
+}
+
 
 /******************* @media ****************************/
 
