--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,9 +32,8 @@
 
                 <% if(locals.usuarioCadastrado) { %>
 
-                    <p  class="infoCadastroSucesso">
-                        O usuário <strong><%= locals.usuarioCadastrado %></strong> foi cadastrado com sucesso.
-                        
+                    <p  class="msgStatusSucesso">
+                        O usuário <strong><%= locals.usuarioCadastrado %></strong> foi cadastrado com sucesso.                        
                     </p> 
 
                 <% } %>
