--- a/views/editarEndereco.ejs
+++ b/views/editarEndereco.ejs
@@ -46,11 +46,7 @@
 
                                     <% if(endereco != null) { %>
                                             <input id="rua" name="rua" type="text" value="<%= endereco.rua %>" placeholder="Digite o nome da rua" >                                        
-                                    <% } %> 
-
-                                    <% if(locals.dadosPreenchido) { %>                                        
-                                        <input id="rua" name="rua" type="text" value="<%= locals.dadosPreenchido && dadosPreenchido.rua %>" placeholder="Digite o nome da rua" >                                        
-                                    <% } %>                                     
+                                    <% } %>
 
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.rua) { %>
                                         <p class="msg-erro-form-endereco"> 
@@ -65,10 +61,6 @@
                                     <% if(endereco != null) { %>
                                         <input id="numero" name="numero" value="<%= endereco.numero %>" type="text" placeholder="Digite o número" >                                        
                                     <% } %>
-
-                                    <% if(locals.dadosPreenchido) { %>
-                                        <input id="numero" name="numero" value="<%= dadosPreenchido.numero %>" type="text" placeholder="Digite o número" >                                        
-                                    <% } %> 
 
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.numero) { %>
                                         <p class="msg-erro-form-endereco"> 
@@ -86,10 +78,6 @@
                                         <input id="complemento" name="complemento" value="<%= endereco.complemento %>" type="text" placeholder="Digite o complemento" >                                        
                                     <% } %>
 
-                                    <% if(locals.dadosPreenchido) { %>
-                                        <input id="complemento" name="complemento" value="<%= dadosPreenchido.complemento %>" type="text" placeholder="Digite o complemento" >                                        
-                                    <% } %> 
-
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.complemento) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.complemento.param + ":  " %></b>  <%= errorsFormEndereco.complemento.msg %>
@@ -103,10 +91,6 @@
                                         <input id="cep" name="cep" type="text" value="<%= endereco.cep %>"  placeholder="Digite o seu CEP" >                                        
                                     <% } %>
 
-                                    <% if(locals.dadosPreenchido) { %>
-                                        <input id="cep" name="cep" type="text" value="<%= dadosPreenchido.cep %>"  placeholder="Digite o seu CEP" >                                        
-                                    <% } %> 
-
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.cep) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.cep.param + ":  " %></b>  <%= errorsFormEndereco.cep.msg %>
@@ -119,10 +103,6 @@
                                     <% if(endereco != null) { %>
                                         <input id="bairro" name="bairro" value="<%= endereco.bairro %>"  type="text" placeholder="Digite o seu bairro" >                                        
                                     <% } %>
-
-                                    <% if(locals.dadosPreenchido) { %>
-                                        <input id="bairro" name="bairro" value="<%= dadosPreenchido.bairro %>"  type="text" placeholder="Digite o seu bairro" >                                        
-                                    <% } %> 
 
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.bairro) { %>
                                         <p class="msg-erro-form-endereco"> 
@@ -140,10 +120,6 @@
                                         <input id="cidade" name="cidade" type="text" value="<%= endereco.cidade %>"  placeholder="Digite o nome da sua cidade" >                                        
                                     <% } %>
 
-                                    <% if(locals.dadosPreenchido) { %>
-                                        <input id="cidade" name="cidade" type="text" value="<%= dadosPreenchido.cidade %>"  placeholder="Digite o nome da sua cidade" >                                        
-                                    <% } %>
-
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.cidade) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.cidade.param + ":  " %></b>  <%= errorsFormEndereco.cidade.msg %>
@@ -157,10 +133,6 @@
                                         <input id="estado" name="estado" value="<%= endereco.estado %>"  type="text" placeholder="Digite o nome do seu estado" >                                        
                                     <% } %>
 
-                                    <% if(locals.dadosPreenchido) { %>
-                                        <input id="estado" name="estado" value="<%= dadosPreenchido.estado %>"  type="text" placeholder="Digite o nome do seu estado" >                                        
-                                    <% } %>
-
                                     <% if(locals.errorsFormEndereco && errorsFormEndereco.estado) { %>
                                         <p class="msg-erro-form-endereco"> 
                                             <b><%= errorsFormEndereco.estado.param + ":  " %></b>  <%= errorsFormEndereco.estado.msg %>
@@ -169,12 +141,12 @@
                                 </div>
                             </div>
 
-                            <% if(endereco != null) { %>
+                            <% if(endereco != null && endereco.id) { %>
                                 <input type="text" name="endereco_para_atualizar" value="<%= endereco.id %>" hidden>                                        
                             <% } %>
 
-                            <% if(locals.dadosPreenchido) { %>
-                                <input type="text" name="endereco_para_atualizar" value="<%= dadosPreenchido.endereco_para_atualizar %>" hidden>                                        
+                            <% if(endereco != null && endereco.endereco_para_atualizar) { %>
+                                <input type="text" name="endereco_para_atualizar" value="<%= endereco.endereco_para_atualizar %>" hidden>                                        
                             <% } %>
 
                             <div class="div-btn-atualiza-endereco">
