--- a/views/enderecos.ejs
+++ b/views/enderecos.ejs
@@ -41,10 +41,36 @@
                             <span class="material-icons-outlined">map</span>MEUS ENDEREÇOS
                         </p>
 
+                        <% if(locals.statusEndereco && statusEndereco.status == 'atualizadoSucesso') { %>                            
+                            <p  class="msgStatusSucesso">
+                                Endereço <strong>atualizado</strong> com sucesso.                                
+                            </p>       
+                        <% } %>
+
+                        <% if(locals.statusEndereco && statusEndereco.status == 'cadastradoSucesso') { %>                            
+                            <p  class="msgStatusSucesso">
+                                Endereço <strong>cadastrado</strong> com sucesso.                                
+                            </p>       
+                        <% } %>
+
+                        <% if(locals.statusEndereco && statusEndereco.status == 'deletadoSucesso') { %>                            
+                            <p  class="msgStatusSucesso">
+                                Endereço <strong>deletado</strong> com sucesso.                                
+                            </p>       
+                        <% } %>
+
+                        <% if(locals.statusEnderecoErro) { %>                            
+                            <p  class="msgStatusErro">
+                                <strong><%=statusEnderecoErro%>!</strong> O processo não foi concluído!                                
+                            </p>       
+                        <% } %>
+
                         <a class="botao_adiciona_endereco" href="/usuario/enderecos/criar"> 
                             <span class="material-icons-outlined">add</span> 
                             Adicionar endereço
                         </a>
+                        
+                        
 
                         <div class="div_card_principal">
                             <% for(let i=0; i<enderecos.length; i++){ %>                                
@@ -66,26 +92,23 @@
                                             <%= enderecos[i].bairro %> - <%= enderecos[i].cidade %> - <%= enderecos[i].estado %>
                                         </li>
 
+                                        <div class="div-btn-edicao-delete">                                        
+                                            <form class="form-btn-editar-endereco" action="/usuario/enderecos/editar" method="POST">
+                                                <input type="text" name="endereco_para_editar" value="<%= enderecos[i].id %>" hidden>
+                                                <button type="submit">
+                                                    <span class="material-icons-outlined">edit</span>
+                                                </button>
+                                            </form>
 
-
-                                            <div class="div-btn-edicao-delete">
-                                            
-                                                <form class="form-btn-editar-endereco" action="/usuario/enderecos/editar" method="POST">
-                                                    <input type="text" name="endereco_para_editar" value="<%= enderecos[i].id %>" hidden>
-                                                    <button type="submit">
-                                                        <span class="material-icons-outlined">edit</span>
+                                            <% if(enderecos.length>1){ %>
+                                                <form class="form-btn-deletar-endereco" action="/usuario/enderecos/delete?_method=DELETE" method="POST">
+                                                    <input type="text" name="endereco_para_excluir" value="<%= enderecos[i].id %>" hidden>
+                                                    <button type="submit" onclick="return confirm('Este endereço será excluído!');" >
+                                                        <span class="material-icons-outlined">delete</span>
                                                     </button>
                                                 </form>
-
-                                                    <% if(enderecos.length>1){ %>
-                                                        <form class="form-btn-deletar-endereco" action="/usuario/enderecos/delete?_method=DELETE" method="POST">
-                                                            <input type="text" name="endereco_para_excluir" value="<%= enderecos[i].id %>" hidden>
-                                                            <button type="submit" onclick="return confirm('Este endereço será excluído!');" >
-                                                                <span class="material-icons-outlined">delete</span>
-                                                            </button>
-                                                        </form>
-                                                    <% } %> 
-                                            </div>
+                                            <% } %> 
+                                        </div>
                                         
                                     </ul>
 
